--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
